# QSL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
benchmarks/: CMakeLists.txt  memory.benchmarks.cpp
cmake/: ClangTidy.cmake  CompileOptions.cmake  CppCheck.cmake  GlobalCompileOptions.cmake  QSLInstall.cmake
include/QSL/Config/: Config.h
include/QSL/Memory/: AffinixAllocator.hpp  FallbackAllocator.hpp  NullAllocator.h  SegregateAllocator.hpp  StackAllocator.hpp  StdAllocator.h
src/Memory/: CMakeLists.txt  NullAllocator.cpp  StdAllocator.cpp
tests/: CMakeLists.txt  memory.tests.cpp
